# PTSD-Engine

./: .gitignore  .gitmodules  INSTRUCCIONES_CEGUI.txt  PTSD.sln  README.md  build.bash  build.bat
CMakeProjects/: CMakeLists.txt
CMakeProjects/PTSD-Core/: CMakeLists.txt
CMakeProjects/PTSD-Graphics/: CMakeLists.txt
CMakeProjects/PTSD-Input/: CMakeLists.txt
CMakeProjects/PTSD-Logger/: CMakeLists.txt
CMakeProjects/PTSD-Physics/: CMakeLists.txt
CMakeProjects/PTSD-Render/: CMakeLists.txt
CMakeProjects/PTSD-Script/: CMakeLists.txt
CMakeProjects/PTSD-Scripting/: CMakeLists.txt
CMakeProjects/PTSD-Sound/: CMakeLists.txt
CMakeProjects/PTSD-UI/: CMakeLists.txt
PTSD-Physics/: PTSD-Physics.cpp  PTSD-Physics.vcxproj
PTSD-Scripting/: PTSD-Scripting.vcxproj
dependencies/CEGUI/: build.bat
dependencies/Ogre/: build.bat
dependencies/bullet/: Instrucciones.txt  build.bat
dependencies/bullet/src/: build_debug.sh  build_release.sh  build_visual_studio_vr_pybullet_double_dynamic.bat  build_visual_studio_vr_pybullet_double_dynamic_PTSD.bat  build_visual_studio_without_pybullet_vr.bat
dependencies/fmod/: libfmod.so.12.8  libfmodL.so.12.8
dependencies/spdlog/src/: README.md
docs/: Blender2Ogre.md  BlenderToLuaScene.md  BucleDeJuego.md  CEEDToLua.md  CodingGuidelines.md  ECS.md  ECSLua.md  GuiaLua.md  InstruccionesBlender2Ogre.txt  InstruccionesBullet.txt  InstruccionesFmod.txt  InstruccionesInput.txt  Rigidbody.txt
projects/GameTest/: GameTest.vcxproj  GameTest.vcxproj.filters
projects/PTSD-Core/: PTSD.vcxproj  PTSD.vcxproj.filters
projects/PTSD-Core/include/: test.h
projects/PTSD-Core/src/: main.cpp  test.cpp
projects/PTSD-Graphics/include/: Camera.h  GraphicsImpl.cpp  GraphicsImpl.h  PTSDGraphics.h  Vec3.h
projects/PTSD-Graphics/src/: Camera.cpp  CameraImpl.cpp  CameraImpl.h  CameraImplementation.h  Graphics.h  GraphicsImpl.cpp  GraphicsImpl.h  GraphicsImplementation.cpp  PTSDGraphics.cpp
projects/PTSD-Input/include/: PTSDInput.h
projects/PTSD-Input/src/: InputImp.cpp  InputImp.h  PTSDInput.cpp
projects/PTSD-Logger/include/: PTSDLog.h
projects/PTSD-Logger/src/: LogImpl.cpp  LogImpl.h  Logger.h  PTSDLog.cpp
projects/PTSD-Physics/include/: Collider.h  ColliderImplementation.h  PTSDPhysics.h  PhysicsImpl.h  PhysicsImplementation.h  Rigidbody.h  RigidbodyImplementation.h
projects/PTSD-Physics/src/: PTSDPhysics.cpp  PhysicsImpl.cpp  PhysicsImplementation.cpp  Rigidbody.cpp
projects/PTSD-Scripting/include/: PTSDScripting.h
projects/PTSD-Scripting/src/: PTSDScripting.cpp
projects/PTSD-Sound/include/: PTSDSound.h
projects/PTSD-Sound/src/: PTSDSound.cpp
projects/PTSD-UI/include/: PTSDUI.h
projects/PTSD-UI/src/: PTSDUI.cpp  UIImpl.cpp  UIImpl.h  UIImplementation.cpp  UIImplementation.h
projects/PTSDInput/src/: PTSDInput.cpp
source/Core/: PTSDVectors.h  main.cpp
source/Core/include/: BtOgre.h  CheckML.h  ECS.h  Entity.h  EntityManager.h  PTSDVectors.h  TransformComponent.h  test.h
source/Core/src/: BtOgre.cpp  EntityManager.cpp  PTSDVectors.cpp  TransformComponent.cpp  main.cpp
source/Graphics/include/: Camera.h  CameraImplementation.h  GraphicsImplementation.h  GraphicsLogger.hpp  GraphicsManager.h  PTSDGraphics.h
source/Graphics/source/: Camera.cpp  CameraImplementation.cpp  GraphicsImplementation.cpp  GraphicsManager.cpp  PTSDGraphics.cpp
source/Input/include/: InputManager.h  PTSDInput.h  PTSDkeys.h
source/Input/source/: InputImplementation.cpp  InputImplementation.h  InputManager.cpp  PTSDInput.cpp
source/Logger/include/: LogImpl.h  LogManager.h  PTSDAssert.h  PTSDLog.h
source/Logger/source/: LogImpl.cpp  LogManager.cpp  PTSDAssert.cpp  PTSDLog.cpp
source/PTSD-Graphics/include/: Camera.h
source/PTSD-Graphics/src/: GraphicsImplementation.h
source/PTSD-Input/include/: PTSDInput.h  Vec2.h
source/PTSD-Input/src/: InputImplementation.h
source/PTSD-Physics/include/: PTSDPhysics.h
source/PTSD-Scripting/src/: PTSDScripting.cpp  ScriptingImplementation.cpp
source/PTSD-UI/include/: PTSDUI.h
source/Physics/include/: Collider.h  ColliderImplementation.h  PTSDPhysics.h  PhysicsImplementation.h  PhysicsManager.h  Rigidbody.h  RigidbodyImplementation.h
source/Physics/source/: Collider.cpp  ColliderImplementation.cpp  PTSDPhysics.cpp  PhysicsImplementation.cpp  PhysicsManager.cpp  Rigidbody.cpp  RigidbodyImplementation.cpp
source/Scripting/include/: Component.h  ECS.h  Entity.h  EntityManager.h  MeshComponent.h  PTSDScripting.h  Rigidbody.h  RigidbodyComponent.h  ScriptManager.h  ScriptingImplementation.h  TransformComponent.h
source/Scripting/source/: Entity.cpp  EntityManager.cpp  MeshComponent.cpp  PTSDScripting.cpp  Rigidbody.cpp  RigidbodyComponent.cpp  ScriptManager.cpp  ScriptingImplementation.cpp  TransformComponent.cpp
source/Sound/include/: PTSDSound.h  Sound.h  SoundAttorney.h  SoundManager.h
source/Sound/source/: PTSDSound.cpp  Sound.cpp  SoundAttorney.cpp  SoundManager.cpp
src/EngineTest/: main.cpp
src/PTSD-Core/: test.cpp
tmpPTSDInputx64-Debug/: vc142.idb
tmpPTSDInputx64-Debug/PTSDInput.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PTSDInput.lastbuildstate  PTSDInput.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tools/: ToLuaScene.py
vsprojects/GameTest/: GameTest.vcxproj  GameTest.vcxproj.filters
vsprojects/PTSD-Core/: PTSD.vcxproj  PTSD.vcxproj.filters  Transform.cpp  Transform.h  TransformImplementation.cpp  TransformImplementation.h
vsprojects/PTSD-Graphics/: PTSD-Graphics.vcxproj  PTSD-Graphics.vcxproj.filters
vsprojects/PTSD-Input/: PTSDInput.vcxproj  PTSDInput.vcxproj.filters
vsprojects/PTSD-Logger/: PTSD-Logger.vcxproj  PTSD-Logger.vcxproj.filters
vsprojects/PTSD-Physics/: PTSD-Physics.vcxproj  PTSD-Physics.vcxproj.filters
vsprojects/PTSD-Scripting/: PTSD-Scripting.vcxproj  PTSD-Scripting.vcxproj.filters
vsprojects/PTSD-Sound/: PTSD-Sound.vcxproj  PTSD-Sound.vcxproj.filters
vsprojects/PTSD-UI/: PTSD-UI.vcxproj  PTSD-UI.vcxproj.filters
vsprojects/PTSDInput/: PTSDInput.vcxproj  PTSDInput.vcxproj.filters
(+182 files in other folders)
